--- a/FrontEnd/client/src/app/teacher/login/login.component.html
+++ b/FrontEnd/client/src/app/teacher/login/login.component.html
@@ -1,34 +1,51 @@
 <form>
-    <!-- Email input -->
-    <div class="form-outline mb-4">
-      <input type="text" id="form2Example1" class="form-control" [(ngModel)]="loginForm.username"/>
-      <label class="form-label" for="form2Example1">Username</label>
-    </div>
-  
-    <!-- Password input -->
-    <div class="form-outline mb-4">
-      <input type="password" id="form2Example2" class="form-control" [(ngModel)]="loginForm.password"/>
-      <label class="form-label" for="form2Example2">Password</label>
-    </div>
-  
-    <!-- 2 column grid layout for inline styling -->
-    <!-- <div class="row mb-4">
+  <!-- Email input -->
+  <div class="form-outline mb-4">
+    <input
+      type="text"
+      id="form2Example1"
+      class="form-control"
+      [(ngModel)]="loginForm.username"
+      name="username"
+    />
+    <label class="form-label" for="form2Example1">Username</label>
+  </div>
+
+  <!-- Password input -->
+  <div class="form-outline mb-4">
+    <input
+      type="password"
+      id="form2Example2"
+      class="form-control"
+      [(ngModel)]="loginForm.password"
+      name="password"
+    />
+    <label class="form-label" for="form2Example2">Password</label>
+  </div>
+
+  <!-- 2 column grid layout for inline styling -->
+  <!-- <div class="row mb-4">
       <div class="col d-flex justify-content-center">
        <div class="form-check">
           <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
           <label class="form-check-label" for="form2Example31"> Remember me </label>
         </div>
       </div> -->
-  
-      <!-- <div class="col">
+
+  <!-- <div class="col">
         <a href="#!">Forgot password?</a>
       </div> -->
-    </div>
-  
-    <!-- Submit button -->
-    <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
-  
-    <!-- Register buttons
+
+  <!-- Submit button -->
+  <button
+    type="submit"
+    class="btn btn-primary btn-block mb-4"
+    (click)="login()"
+  >
+    Sign in
+  </button>
+
+  <!-- Register buttons
     <div class="text-center">
       <p>Not a member? <a href="#!">Register</a></p>
       <p>or sign up with:</p>
@@ -48,4 +65,4 @@
         <i class="fab fa-github"></i>
       </button>
     </div> -->
-  </form>
+</form>
