--- a/FrontEnd/client/src/app/teacher/login/login.component.html
+++ b/FrontEnd/client/src/app/teacher/login/login.component.html
@@ -1,68 +1,32 @@
 <form>
-  <!-- Email input -->
-  <div class="form-outline mb-4">
+  <div class="form-group col-md-4">
+    <label for="exampleInputUsername">Username</label>
     <input
-      type="text"
-      id="form2Example1"
+      type="username"
       class="form-control"
+      id="exampleInputUsername"
+      placeholder="Enter username"
       [(ngModel)]="loginForm.username"
       name="username"
     />
-    <label class="form-label" for="form2Example1">Username</label>
   </div>
-
-  <!-- Password input -->
-  <div class="form-outline mb-4">
+  <div class="form-group col-md-4">
+    <label for="exampleInputPassword1">Password</label>
     <input
       type="password"
-      id="form2Example2"
       class="form-control"
+      id="exampleInputPassword1"
+      placeholder="Password"
       [(ngModel)]="loginForm.password"
       name="password"
     />
-    <label class="form-label" for="form2Example2">Password</label>
   </div>
 
-  <!-- 2 column grid layout for inline styling -->
-  <!-- <div class="row mb-4">
-      <div class="col d-flex justify-content-center">
-       <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-          <label class="form-check-label" for="form2Example31"> Remember me </label>
-        </div>
-      </div> -->
-
-  <!-- <div class="col">
-        <a href="#!">Forgot password?</a>
-      </div> -->
-
   <!-- Submit button -->
-  <button
-    type="submit"
-    class="btn btn-primary btn-block mb-4"
-    (click)="login()"
-  >
-    Sign in
-  </button>
 
-  <!-- Register buttons
-    <div class="text-center">
-      <p>Not a member? <a href="#!">Register</a></p>
-      <p>or sign up with:</p>
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-facebook-f"></i>
-      </button>
-  
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-google"></i>
-      </button>
-  
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-twitter"></i>
-      </button>
-  
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-github"></i>
-      </button>
-    </div> -->
+  <div class="col-sm-10">
+    <button type="submit" class="btn btn-primary" (click)="login()">
+      Sign in
+    </button>
+  </div>
 </form>
