change login page, still have error to get data to angular

--- a/FrontEnd/client/src/app/teacher/schedule/schedule.component.html
+++ b/FrontEnd/client/src/app/teacher/schedule/schedule.component.html
@@ -1,6 +1,11 @@
 <form>
   <label for="apartmentName">Apartment Name</label>
-  <input type="text" id="apartmentName" name="apartmentName" />
+  <input
+    type="text"
+    id="apartmentName"
+    name="apartmentName"
+    [(ngModel)]="apartmentName"
+  />
   <button
     class="btn btn-primary"
     type="submit"
