--- a/FrontEnd/client/src/app/teacher/login/login.component.html
+++ b/FrontEnd/client/src/app/teacher/login/login.component.html
@@ -1,4 +1,4 @@
-<form>
+<!-- <form>
   <div class="form-group col-md-4">
     <label for="exampleInputUsername">Username</label>
     <input
@@ -22,11 +22,79 @@
     />
   </div>
 
-  <!-- Submit button -->
+  <input type="checkbox" value="lsRememberMe" id="rememberMe" />
+  <label for="rememberMe">Remember me</label>
+  
+  <!Submit button>
 
   <div class="col-sm-10">
     <button type="submit" class="btn btn-primary" (click)="login()">
       Sign in
     </button>
   </div>
+</form> 
+-->
+
+<form>
+  <!-- username input -->
+
+  <div class="form-group col-md-4">
+    <label for="exampleInputUsername">Username</label>
+    <input
+      type="username"
+      class="form-control"
+      id="exampleInputUsername"
+      placeholder="Enter username"
+      [(ngModel)]="loginForm.username"
+      name="username"
+    />
+  </div>
+
+  <!-- Password input -->
+  <div class="form-group col-md-4">
+    <label for="exampleInputPassword1">Password</label>
+    <input
+      type="password"
+      class="form-control"
+      id="exampleInputPassword1"
+      placeholder="Password"
+      [(ngModel)]="loginForm.password"
+      name="password"
+    />
+  </div>
+
+  <!-- 2 column grid layout for inline styling -->
+  <div class="row col-md-4">
+    <div class="col d-flex justify-content-center">
+      <!-- Checkbox -->
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          value=""
+          id="form2Example31"
+          name="remember-me"
+          checked
+        />
+        <label class="form-check-label" for="form2Example31">
+          Remember me
+        </label>
+      </div>
+    </div>
+
+    <div class="col">
+      <!-- Simple link -->
+      <a href="#!">Forgot password?</a>
+    </div>
+  </div>
+
+  <!-- Submit button -->
+
+  <button
+    type="submit"
+    class="btn btn-primary btn-block col-md-4"
+    (click)="login()"
+  >
+    Sign in
+  </button>
 </form>
